[project]
name = "pyperflut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.7",
    "numpy>=1.26.0",
    "pillow>=11.1.0",
    "pygame>=2.5.0",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "webdriver-manager>=4.0.2",
]
